--- a/src/edit-form-component/edit-form-component.component.scss
+++ b/src/edit-form-component/edit-form-component.component.scss
@@ -1,6 +1,7 @@
 // SCSS Variables
+//edit form scss
 $font-stack: 'Segoe UI', sans-serif;
-$primary-color: #007ad9;
+$primary-color: black;
 $info-color: #17a2b8;
 $secondary-color: #6c757d;
 $border-color: #ddd;
