--- a/src/forms/forms.component.scss
+++ b/src/forms/forms.component.scss
@@ -1,4 +1,5 @@
 // SCSS Variables
+//forms scss
 $font-stack: 'Segoe UI', sans-serif;
 $primary-color: #007ad9;
 $info-color: #17a2b8; // Added for show button
