--- a/src/dashboard/dashboard.component.html
+++ b/src/dashboard/dashboard.component.html
@@ -44,10 +44,10 @@
         <label><strong>Skills:</strong></label>
         <span>{{ getDisplayValue('skills', userData.skills) }}</span>
       </div>
-      <div class="button-group mt-3">
+      <!-- <div class="button-group mt-3">
         <button class="btn btn-primary me-2" (click)="onUpdate(userData)">Update</button>
         <button class="btn btn-danger" (click)="onDelete()">Delete</button>
-      </div>
+      </div> -->
     </div>
   </div>
 
