--- a/src/edit-form-component/edit-form-component.component.scss
+++ b/src/edit-form-component/edit-form-component.component.scss
@@ -5,7 +5,7 @@ $primary-color: black;
 $info-color: #17a2b8;
 $secondary-color: #6c757d;
 $border-color: #ddd;
-$background-light: #f8f9fa;
+$background-light: #1f2937;
 $status-success: #28a745;
 $status-warning: #ffc107;
 $status-danger: #dc3545;
@@ -143,7 +143,7 @@ $box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     .p-button-primary {
       background-color: $status-success;
       border-color: $status-success;
-      color: white;
+      color: #1f2937;
       
       &:hover:not(:disabled) {
         background-color: darken($status-success, 5%);
